--- a/css/styles.css
+++ b/css/styles.css
@@ -163,12 +163,12 @@ sup {
 }
 
 a {
-  color: #f4623a;
+  color: #F9A602;
   text-decoration: none;
   background-color: transparent;
 }
 a:hover {
-  color: #d6370c;
+  color: #F9A602;
   text-decoration: underline;
 }
 
@@ -2905,7 +2905,7 @@ fieldset:disabled a.btn {
   text-decoration: none;
 }
 .btn-link:hover {
-  color: #d6370c;
+  color: #F9A602;
   text-decoration: underline;
 }
 .btn-link:focus, .btn-link.focus {
@@ -4586,7 +4586,7 @@ input[type=button].btn-block {
 }
 .page-link:hover {
   z-index: 2;
-  color: #d6370c;
+  color: #F9A602;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -9756,7 +9756,7 @@ button.bg-dark:focus {
 }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #d6370c !important;
+  color: #F9A602 !important;
 }
 
 .text-secondary {
